--- a/AppFebrapo/src/main/resources/application.properties
+++ b/AppFebrapo/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/App
-spring.datasource.username=root
-spring.datasource.password=root2023
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+//spring.datasource.url=jdbc:mysql://localhost:3306/App
+//spring.datasource.username=root
+//spring.datasource.password=root2023
+//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+//spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.url=jdbc:h2:file:~/AppFebrapo
+spring.datasource.username=rm97032
+spring.datasource.password=fiap23
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
